<resources>
    <string name="app_name">SearchBin</string>
    <string name="search_time">Дата поиска</string>
    <string name="searched_bin">BIN</string>
    <string name="scheme_network">scheme/network</string>
    <string name="brand">brand</string>
    <string name="card_number">card number</string>
    <string name="length">length</string>
    <string name="luhn">luhn</string>
    <string name="type">type</string>
    <string name="prepaid">prepaid</string>
    <string name="country">country</string>
    <string name="bank">bank</string>
    <string name="url">url</string>
    <string name="phone">phone</string>
    <string name="search_btn">search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>